切换主题为icarus

--- a/source/_posts/202106/【转载】安全背后：浏览器是如何校验证书的.md
+++ b/source/_posts/202106/【转载】安全背后：浏览器是如何校验证书的.md
@@ -5,6 +5,7 @@ category:
  - 转载
 tags: [转载, 证书, https]
 permalink: /articles/2021/06/18/1624031031776.html
+toc: true
 ---
 
 本文转载自：[安全背后：浏览器是如何校验证书的 - CJ Ting&#39;s Blog](https://cjting.me/2021/03/02/how-to-validate-tls-certificate/)
