--- a/source/_posts/202107/【转载】中国互联网超爱读错的单词：极客词典.md
+++ b/source/_posts/202107/【转载】中国互联网超爱读错的单词：极客词典.md
@@ -16,6 +16,10 @@ permalink: /articles/2021/07/06/1625541234364.html
 >
 > 「哦哦，你说的是 Chrome 吧⋯⋯」（虚构场景）
 
+
+<!-- more -->
+
+
 不知道你有没有遇到以上情况，由于音标误读、缩写误读、外来语言等原因的以讹传讹，导致互联网环境中许多英文单词的读音都是错的。在某些沟通过程中，甚至需要通过拼写来了解对方的意思。
 
 为了解决这一问题，我们整理了一系列互联网超爱读错的单词，做了一个小程序《极客词典》，其中包含开发、设计、产品、媒体等四个方向。
