--- a/source/_posts/202107/【转载】虽是懒人福利，但一锅流其实没那么简单.md
+++ b/source/_posts/202107/【转载】虽是懒人福利，但一锅流其实没那么简单.md
@@ -12,6 +12,10 @@ permalink: /articles/2021/07/06/1625541340259.html
 
 > 既要了解烹饪，更要了解食材，让我们聚焦只用一口锅就能完成整道菜的「一锅流」
 
+
+<!-- more -->
+
+
 「一锅流」是近期常被提起的烹饪方式，核心思想是只通过一口锅——无论炒锅、铁锅还是电饭锅——便能完成一餐，不仅有饭有菜，而且食材丰富不单一，尤其适用于觉得一个人何必下厨的单身人士。可坊间通常对一锅流持乐观态度，通常都会赋予「简单」、「快速」乃至「入门」的标签，其实不然，一锅流的优点是通过既定的顺序完成烹饪并区别于传统菜式复杂繁琐的流程，但它也有一个新手很容易翻车的难点就是你要熟悉不同食材乃至调料的特性，包括水分、口味和搭配，而这些又很难教条和系统的学习，更多是经验主义。
 
 所以我虽然非常推崇一锅流这种新式烹饪，但也希望大家还能给予其充分的敬畏——不要无畏的便随意开始，失败事小，我认为很多人从兴致勃勃到兴味索然只有一步之遥，不要让「误以为简单」成为压垮你从而放弃的稻草。接下来我会分享较为常见的几道一锅流食谱，分别是焖面、焖饭、抓饭、煲仔饭和一道很普适的韩式辣豆腐汤，除了食材准备和步骤，我也会尽可能的提及过程中关乎的一些技巧和经验，希望你帮助你更好地了解食材——你没看错，我一直认为烹饪的核心与提升从来不是学会方法，而是熟悉食物。
