--- a/source/_posts/202108/【转载】优秀开源软件的类，都是怎么命名的？.md
+++ b/source/_posts/202108/【转载】优秀开源软件的类，都是怎么命名的？.md
@@ -2,18 +2,16 @@ title: 优秀开源软件的类，都是怎么命名的？
 date: '2021-08-12 14:57:51'
 category:
  - 转载
- - Docker
 tags:
  - 转载
- - docker
- - MySQL
- - 主从
- - 复制
- - 搭建
+ - 开源
+ - 软件
+ - 命名
+toc: true
 permalink: /articles/2021/08/12/1628751472237.html
 ---
 
-本文转载自：[基于docker搭建的mysql主从复制](https://juejin.cn/post/6995181739043717134?utm_source=gold_browser_extension)
+本文转载自：[优秀开源软件的类，都是怎么命名的？](https://juejin.cn/post/6995342820512890893?utm_source=gold_browser_extension)
 
 ---
 
