--- a/source/_posts/java/20210824/01.md
+++ b/source/_posts/java/20210824/01.md
@@ -341,3 +341,4 @@ public class MyNameGenerator extends AnnotationBeanNameGenerator {
 
 1. [扫描注解的用法及冲突原则](https://juejin.cn/post/6892493290671702030 "https://juejin.cn/post/6892493290671702030")
 2. [同名类冲](https://link.juejin.cn?target=https%3A%2F%2Fblog.csdn.net%2FZYC88888%2Farticle%2Fdetails%2F84758835 "https://blog.csdn.net/ZYC88888/article/details/84758835")
+3. [SpringBoot包扫描之多模块多包名扫描和同类名扫描冲突解决｜8月更文挑战](https://juejin.cn/post/6999428902275940382?utm_source=gold_browser_extension#comment)
