--- a/source/_posts/java/20210824/01.md
+++ b/source/_posts/java/20210824/01.md
@@ -1,10 +1,12 @@
-title: SpringBoot扫描注解分析与同类名冲突解决
+title: 【转载】SpringBoot扫描注解分析与同类名冲突解决
 date: 2021-08-24 15:02:22
 toc: true
 permalink: /articles/java/20210824/01.html
 category:
+ - 转载
  - Java
 tags:
+ - 转载
  - Java
  - SpringBoot
  - 注解
@@ -18,6 +20,10 @@ tags:
  - pom
  - 启动
  - 功能
+---
+
+本文转载自：[SpringBoot包扫描之多模块多包名扫描和同类名扫描冲突解决｜8月更文挑战](https://juejin.cn/post/6999428902275940382?utm_source=gold_browser_extension#comment)
+
 ---
 
 我们在开发`springboot`项目时候，创建好SpringBoot项目就可以通过启动类直间启动，运行一个web项目，非常方便简单，不像我们之前通过`Spring+SpringMvc`要运行启动一个web项目还需要要配置各种包扫描和`tomcat`才能启动
@@ -340,5 +346,4 @@ public class MyNameGenerator extends AnnotationBeanNameGenerator {
 ## 参考文献
 
 1. [扫描注解的用法及冲突原则](https://juejin.cn/post/6892493290671702030 "https://juejin.cn/post/6892493290671702030")
-2. [同名类冲](https://link.juejin.cn?target=https%3A%2F%2Fblog.csdn.net%2FZYC88888%2Farticle%2Fdetails%2F84758835 "https://blog.csdn.net/ZYC88888/article/details/84758835")
-3. [SpringBoot包扫描之多模块多包名扫描和同类名扫描冲突解决｜8月更文挑战](https://juejin.cn/post/6999428902275940382?utm_source=gold_browser_extension#comment)
+2. [同名类冲](https://blog.csdn.net/ZYC88888/article/details/84758835 "https://blog.csdn.net/ZYC88888/article/details/84758835")
