--- a/source/_posts/202108/【转载】国内开源镜像站点汇总.md
+++ b/source/_posts/202108/【转载】国内开源镜像站点汇总.md
@@ -22,6 +22,10 @@ tags:
 4. 阿里：[http://mirrors.aliyun.com/](http://mirrors.aliyun.com/)
 5. 华为：[https://mirrors.huaweicloud.com/](https://mirrors.huaweicloud.com/)
 
+
+<!-- more -->
+
+
 #### **B、教育站**
 
 1. 上海交通大学：[http://ftp.sjtu.edu.cn/html/resources.xml](http://ftp.sjtu.edu.cn/html/resources.xml)（部分移动运营商出口状况不佳，无法访问）
