--- a/source/_posts/202108/【转载】国内开源镜像站点汇总.md
+++ b/source/_posts/202108/【转载】国内开源镜像站点汇总.md
@@ -12,9 +12,13 @@ tags:
  - 镜像
 ---
 
+本文转载自：[国内开源镜像站点汇总 - 萌虎 | moehu.org](https://moehu.org/2021/04/27/12/1311)
+
+---
+
 # 一、站点版
 
-#### **A、企业站**
+## A、企业站
 
 1. 搜狐：[http://mirrors.sohu.com/](http://mirrors.sohu.com/)
 2. 腾讯：[https://mirrors.cloud.tencent.com//](https://mirrors.cloud.tencent.com//)
@@ -26,83 +30,87 @@ tags:
 <!-- more -->
 
 
-#### **B、教育站**
+## B、教育站
 
-1. 上海交通大学：[http://ftp.sjtu.edu.cn/html/resources.xml](http://ftp.sjtu.edu.cn/html/resources.xml)（部分移动运营商出口状况不佳，无法访问）
-2. 华中科技大学：[http://mirror.hust.edu.cn/](http://mirror.hust.edu.cn/)（当前已用容量估计：4.83T）
-3. 清华大学：[http://mirrors.tuna.tsinghua.edu.cn/](http://mirrors.tuna.tsinghua.edu.cn/)（当前已用容量估计：9.8T）
+1. 上海交通大学：[http://ftp.sjtu.edu.cn/html/resources.xml](http://ftp.sjtu.edu.cn/html/resources.xml)
+2. 华中科技大学：[http://mirror.hust.edu.cn/](http://mirror.hust.edu.cn/)
+3. 清华大学：[http://mirrors.tuna.tsinghua.edu.cn/](http://mirrors.tuna.tsinghua.edu.cn/)
 4. 北京理工大学：[http://mirror.bit.edu.cn/web/](http://mirror.bit.edu.cn/web/)
 5. 兰州大学：[http://mirror.lzu.edu.cn/](http://mirror.lzu.edu.cn/)
-6. 中国科技大学：[http://mirrors.ustc.edu.cn/](http://mirrors.ustc.edu.cn/)（当前已用容量估计：21.32T）
-7. 大连东软信息学院：[http://mirrors.neusoft.edu.cn/](http://mirrors.neusoft.edu.cn/)（当前已用容量估计：2.5T）
+6. 中国科技大学：[http://mirrors.ustc.edu.cn/](http://mirrors.ustc.edu.cn/)
+7. 大连东软信息学院：[http://mirrors.neusoft.edu.cn/](http://mirrors.neusoft.edu.cn/)
 8. 东北大学：[http://mirror.neu.edu.cn/](http://mirror.neu.edu.cn/)
 9. 大连理工大学：[http://mirror.dlut.edu.cn/](http://mirror.dlut.edu.cn/)
-10. 哈尔滨工业大学：[http://run.hit.edu.cn/html/](http://run.hit.edu.cn/html/)（部分联通运营商出口状况不佳，无法访问）
+10. 哈尔滨工业大学：[http://run.hit.edu.cn/html/](http://run.hit.edu.cn/html/)
 11. 北京交通大学：[http://mirror.bjtu.edu.cn/cn/](http://mirror.bjtu.edu.cn/cn/)
-12. 中国地质大学：[http://mirrors.cug.edu.cn/](http://mirrors.cug.edu.cn/)（当前已用容量估计：2.3T）
+12. 中国地质大学：[http://mirrors.cug.edu.cn/](http://mirrors.cug.edu.cn/)
 13. 浙江大学：[http://mirrors.zju.edu.cn/](http://mirrors.zju.edu.cn/)
 14. 厦门大学：[http://mirrors.xmu.edu.cn/](http://mirrors.xmu.edu.cn/)
 15. 中山大学：[http://mirror.sysu.edu.cn/](http://mirror.sysu.edu.cn/)
-16. 重庆大学：[http://mirrors.cqu.edu.cn/](http://mirrors.cqu.edu.cn/)（当前已用容量估计：3.93T）
-17. 北京化工大学：[http://ubuntu.buct.edu.cn/](http://ubuntu.buct.edu.cn/)（AndroidSDK镜像仅供校内使用，当前已用容量估计：1.72T）
+16. 重庆大学：[http://mirrors.cqu.edu.cn/](http://mirrors.cqu.edu.cn/)
+17. 北京化工大学：[http://ubuntu.buct.edu.cn/](http://ubuntu.buct.edu.cn/)
 18. 南阳理工学院：[http://mirror.nyist.edu.cn/](http://mirror.nyist.edu.cn/)
 19. 中国科学院：[http://www.opencas.org/mirrors/](http://www.opencas.org/mirrors/)
-20. 电子科技大学星辰工作室：[http://mirrors.stuhome.net/](http://mirrors.stuhome.net/)（当前已用容量估计：1.08T）
-21. 西北农林科技大学：[http://mirrors.nwsuaf.edu.cn/](http://mirrors.nwsuaf.edu.cn/)（只做CentOS镜像，当前已用容量估计：140GB）
+20. 电子科技大学星辰工作室：[http://mirrors.stuhome.net/](http://mirrors.stuhome.net/)
+21. 西北农林科技大学：[http://mirrors.nwsuaf.edu.cn/](http://mirrors.nwsuaf.edu.cn/)
 
 #### **C、其他站**
 
-1. 首都在线科技股份有限公司（英文名CapitalOnlineDataService）：[http://mirrors.yun-idc.com/2.](http://mirrors.yun-idc.com/2.) 常州贝特康姆软件技术有限公司：[http://centos.bitcomm.cn/](http://centos.bitcomm.cn/)（只做CentOS镜像，当前已用容量估计：140GB）
-2. 公云PubYun（母公司为贝特康姆）：[http://mirrors.pubyun.com/](http://mirrors.pubyun.com/)
-3. 中国互联网络信息中心：[http://mirrors.cnnic.cn/](http://mirrors.cnnic.cn/)（只做Apache镜像，当前已用容量估计：120GB）
+1. 首都在线科技股份有限公司（英文名CapitalOnlineDataService）：[http://mirrors.yun-idc.com/](http://mirrors.yun-idc.com/) 
+2. 常州贝特康姆软件技术有限公司：[http://centos.bitcomm.cn/](http://centos.bitcomm.cn/)
+3. 公云PubYun（母公司为贝特康姆）：[http://mirrors.pubyun.com/](http://mirrors.pubyun.com/)
+4. 中国互联网络信息中心：[http://mirrors.cnnic.cn/](http://mirrors.cnnic.cn/)
 
 ---
 
 # 二、软件版
 
-#### **A、操作系统类**
+## A、操作系统类
 
-##### 1、Ubuntu
+### 1、Ubuntu
 
 1. 阿里云：[http://mirrors.aliyun.com/ubuntu-releases/](http://mirrors.aliyun.com/ubuntu-releases/)
 2. 网易：[http://mirrors.163.com/ubuntu-releases/](http://mirrors.163.com/ubuntu-releases/)
-3. 搜狐：[http://mirrors.sohu.com/ubuntu-releases/](http://mirrors.sohu.com/ubuntu-releases/)（搜狐在12年之后似乎不同步了）
+3. 搜狐：[http://mirrors.sohu.com/ubuntu-releases/](http://mirrors.sohu.com/ubuntu-releases/)
 4. 首都在线科技股份有限公司：[http://mirrors.yun-idc.com/ubuntu-releases/](http://mirrors.yun-idc.com/ubuntu-releases/)
 
-##### 2、CentOS
+### 2、CentOS
 
 1. 网易：[http://mirrors.163.com/centos/](http://mirrors.163.com/centos/)
 2. 搜狐：[http://mirrors.sohu.com/centos/](http://mirrors.sohu.com/centos/)
 3. 阿里云：[http://mirrors.aliyun.com/centos/](http://mirrors.aliyun.com/centos/)
 
-#### **B、操作系统类**
+## **B、中间件类**
 
-##### 1、Tomcat、Apache
+### 1、Tomcat、Apache
 
 1. 中国互联网络信息中心：[http://mirrors.cnnic.cn/apache/](http://mirrors.cnnic.cn/apache/)
 2. 华中科技大学：[http://mirrors.hust.edu.cn/apache/](http://mirrors.hust.edu.cn/apache/)
 
-##### 2、MySQL
+### 2、MySQL
 
 1. 搜狐：[http://mirrors.sohu.com/mysql](http://mirrors.sohu.com/mysql)
-2. 中国科技技术大学：[http://mirrors.ustc.edu.cn/mysql-ftp/Downloads](http://mirrors.ustc.edu.cn/mysql-ftp/Downloads)
 
-##### 3、PostgreSQL
+    > 注: 如访问不到请去掉地址栏的`:8080`。
+
+3. 中国科技技术大学：[http://mirrors.ustc.edu.cn/mysql-ftp/Downloads](http://mirrors.ustc.edu.cn/mysql-ftp/Downloads)
+
+### 3、PostgreSQL
 
 1. 浙江大学：[http://mirrors.zju.edu.cn/postgresql/](http://mirrors.zju.edu.cn/postgresql/)
 
-##### 4、MariaDB
+### 4、MariaDB
 
 1. 中国科技技术大学：[https://mirrors.ustc.edu.cn/mariadb/](https://mirrors.ustc.edu.cn/mariadb/)
 
-##### 5、VideoLAN
+### 5、VideoLAN
 
 1. 大连东软信息学院：[http://mirrors.neusoft.edu.cn/videolan/](http://mirrors.neusoft.edu.cn/videolan/)
 2. 中国科技大学：[http://mirrors.ustc.edu.cn/videolan-ftp/](http://mirrors.ustc.edu.cn/videolan-ftp/)
 
-#### **C、开发工具类**
+## **C、开发工具类**
 
-##### 1、Eclipse
+### 1、Eclipse
 
 1. 中国科技大学：[http://mirrors.ustc.edu.cn/eclipse/](http://mirrors.ustc.edu.cn/eclipse/)
 2. 东北大学B：[http://mirror.neu.edu.cn/eclipse/](http://mirror.neu.edu.cn/eclipse/)
