--- a/source/_posts/202108/【转载】国内开源镜像站点汇总.md
+++ b/source/_posts/202108/【转载】国内开源镜像站点汇总.md
@@ -16,9 +16,9 @@ tags:
 
 ---
 
-# 一、站点版
+## 站点
 
-## A、企业站
+### 企业站
 
 1. 搜狐：[http://mirrors.sohu.com/](http://mirrors.sohu.com/)
 2. 腾讯：[https://mirrors.cloud.tencent.com//](https://mirrors.cloud.tencent.com//)
@@ -30,7 +30,7 @@ tags:
 <!-- more -->
 
 
-## B、教育站
+### 教育站
 
 1. 上海交通大学：[http://ftp.sjtu.edu.cn/html/resources.xml](http://ftp.sjtu.edu.cn/html/resources.xml)
 2. 华中科技大学：[http://mirror.hust.edu.cn/](http://mirror.hust.edu.cn/)
@@ -54,7 +54,7 @@ tags:
 20. 电子科技大学星辰工作室：[http://mirrors.stuhome.net/](http://mirrors.stuhome.net/)
 21. 西北农林科技大学：[http://mirrors.nwsuaf.edu.cn/](http://mirrors.nwsuaf.edu.cn/)
 
-#### **C、其他站**
+### 其他站
 
 1. 首都在线科技股份有限公司（英文名CapitalOnlineDataService）：[http://mirrors.yun-idc.com/](http://mirrors.yun-idc.com/) 
 2. 常州贝特康姆软件技术有限公司：[http://centos.bitcomm.cn/](http://centos.bitcomm.cn/)
@@ -63,61 +63,61 @@ tags:
 
 ---
 
-# 二、软件版
+## 软件
 
-## A、操作系统类
+### 操作系统
 
-### 1、Ubuntu
+#### Ubuntu
 
 1. 阿里云：[http://mirrors.aliyun.com/ubuntu-releases/](http://mirrors.aliyun.com/ubuntu-releases/)
 2. 网易：[http://mirrors.163.com/ubuntu-releases/](http://mirrors.163.com/ubuntu-releases/)
 3. 搜狐：[http://mirrors.sohu.com/ubuntu-releases/](http://mirrors.sohu.com/ubuntu-releases/)
 4. 首都在线科技股份有限公司：[http://mirrors.yun-idc.com/ubuntu-releases/](http://mirrors.yun-idc.com/ubuntu-releases/)
 
-### 2、CentOS
+#### CentOS
 
 1. 网易：[http://mirrors.163.com/centos/](http://mirrors.163.com/centos/)
 2. 搜狐：[http://mirrors.sohu.com/centos/](http://mirrors.sohu.com/centos/)
 3. 阿里云：[http://mirrors.aliyun.com/centos/](http://mirrors.aliyun.com/centos/)
 
-## **B、中间件类**
+## 中间件
 
-### 1、Tomcat、Apache
+### Tomcat、Apache
 
 1. 中国互联网络信息中心：[http://mirrors.cnnic.cn/apache/](http://mirrors.cnnic.cn/apache/)
 2. 华中科技大学：[http://mirrors.hust.edu.cn/apache/](http://mirrors.hust.edu.cn/apache/)
 
-### 2、MySQL
+### MySQL
 
-1. 搜狐：[http://mirrors.sohu.com/mysql](http://mirrors.sohu.com/mysql)
+1. 搜狐：[http://mirrors.sohu.com/mysql/](http://mirrors.sohu.com/mysql/)
 
     > 注: 如访问不到请去掉地址栏的`:8080`。
 
 3. 中国科技技术大学：[http://mirrors.ustc.edu.cn/mysql-ftp/Downloads](http://mirrors.ustc.edu.cn/mysql-ftp/Downloads)
 
-### 3、PostgreSQL
+### PostgreSQL
 
 1. 浙江大学：[http://mirrors.zju.edu.cn/postgresql/](http://mirrors.zju.edu.cn/postgresql/)
 
-### 4、MariaDB
+### MariaDB
 
 1. 中国科技技术大学：[https://mirrors.ustc.edu.cn/mariadb/](https://mirrors.ustc.edu.cn/mariadb/)
 
-### 5、VideoLAN
+### VideoLAN
 
 1. 大连东软信息学院：[http://mirrors.neusoft.edu.cn/videolan/](http://mirrors.neusoft.edu.cn/videolan/)
 2. 中国科技大学：[http://mirrors.ustc.edu.cn/videolan-ftp/](http://mirrors.ustc.edu.cn/videolan-ftp/)
 
-## **C、开发工具类**
+## 开发工具
 
-### 1、Eclipse
+### Eclipse
 
 1. 中国科技大学：[http://mirrors.ustc.edu.cn/eclipse/](http://mirrors.ustc.edu.cn/eclipse/)
-2. 东北大学B：[http://mirror.neu.edu.cn/eclipse/](http://mirror.neu.edu.cn/eclipse/)
+2. 东北大学：[http://mirror.neu.edu.cn/eclipse/](http://mirror.neu.edu.cn/eclipse/)
 
 ---
 
-# 三、官方镜像列表状态地址
+## 官方镜像列表状态地址
 
 1. CentOS：[http://mirror-status.centos.org/#cn](http://mirror-status.centos.org/#cn)
 2. Archlinux：[https://www.archlinux.org/mirrors/status/](https://www.archlinux.org/mirrors/status/)
