Perf 优化文章分类

--- a/source/_posts/202107/致远修改用户名.md
+++ b/source/_posts/202107/致远修改用户名.md
@@ -2,10 +2,10 @@ title: 致远修改用户名
 date: 2021-07-07 15:21:12
 toc: true
 category:
- - 致远
-tags: 
- - 致远
  - Seeyon
+tags: 
+ - Seeyon
+ - 致远
 ---
 
 代码如下：
