--- a/source/_posts/202106/【转载】屏蔽爬虫请求的四种方式.md
+++ b/source/_posts/202106/【转载】屏蔽爬虫请求的四种方式.md
@@ -65,7 +65,9 @@ iptables -I INPUT -s 8.0.0.1 -j DROP
 
 你只需要在现有的安全组规则中新增一条屏蔽特定来源 IP 的规则，就可以实现在安全组层面上屏蔽特定的 IP。
 
-![](https://b3logfile.com/file/2021/06/solo-fetchupload-5808181516179342577-abc0e9c9.png)## 4. 在 CDN 层面屏蔽 IP
+![](https://b3logfile.com/file/2021/06/solo-fetchupload-5808181516179342577-abc0e9c9.png)
+
+## 4. 在 CDN 层面屏蔽 IP
 
 现在我们的业务大多会使用 CDN 来完成数据的分发。在这种情况下，服务器获取到请求不是来自我们要屏蔽的 IP，因此，我们可以直接在 CDN 层面屏蔽掉爬虫的 IP。
 
