--- a/source/_posts/202109/蓝凌全局拦截流程节点.md
+++ b/source/_posts/202109/蓝凌全局拦截流程节点.md
@@ -2,7 +2,7 @@ title: 蓝凌全局拦截流程节点
 date: 2021-09-06 15:16:00
 toc: true
 category:
- - Landrary
+ - Landray
 tags:
  - Landray
  - 全局
@@ -109,10 +109,10 @@ public class GlobalSmsListener implements IEventListener {
         IBaseModel mainModel = execution.getMainModel();
         String notifyType = processDefinition.getNotifyType();
 
-         boolean classResult = mainModel instanceof KmImissiveMain;
-         if (!classResult) {
-             return;
-         }
+        boolean classResult = mainModel instanceof KmImissiveMain;
+        if (!classResult) {
+            return;
+        }
 
         ExtendAuthModel kmImissiveMain = Convert.convert(ExtendAuthModel.class, mainModel);
 
