--- a/source/_posts/202107/致远修改账号密码.md
+++ b/source/_posts/202107/致远修改账号密码.md
@@ -1,4 +1,4 @@
-title: 致远修改用户名
+title: 致远修改账号密码
 date: 2021-07-07 15:21:12
 comment: false
 toc: true
@@ -7,7 +7,12 @@ category:
 tags: 
  - Seeyon
  - 致远
+ - 修改
+ - 账号
+ - 密码
 ---
+
+操作的表为：`org_principal`。
 
 代码如下：
 
