--- a/source/_posts/202112/正则表达式分享.md
+++ b/source/_posts/202112/正则表达式分享.md
@@ -14,7 +14,11 @@ tags:
 
 更新于：2021年12月20日09点41分
 
-开源中国最新资讯正则：`<div class="item news-item news-item-hover" data-url="\S+">\s+<div.*>\s+<h3.*>\s+<div class="title" title="[^"]+">.*\s+.*\s+.*\s+.*\s+<p class="line-clamp">[^<]+<\/p>`
+开源中国最新资讯正则：
+
+```regexp
+<div class="item news-item news-item-hover" data-url="\S+">\s+<div.*>\s+<h3.*>\s+<div class="title" title="[^"]+">.*\s+.*\s+.*\s+.*\s+<p class="line-clamp">[^<]+<\/p>
+```
 
 ![Snipaste20211220093832.png](https://b3logfile.com/file/2021/12/Snipaste_2021-12-20_09-38-32-c345932e.png)
 
