--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -21,6 +21,20 @@ tags:
 
 `(a + b)² = a² + 2ab + b²` 叫做两数和的完全平方公式。
 
+计算 `(x + 2)(x + 2) = 0` 的结果。
+
+1. `x * (x + 2)` + `2 * (x + 2)`
+2. 得到 `x² + 2x + 2x + 4`
+3. 化简 `x² + 4x + 4`
+4. 逆推 `(a + b)² = a² + 2ab + b²`
+
 ### 完全平方差
 
 `(a - b)² = a² - 2ab + b²` 叫做两数差的完全平方公式。
+
+计算 `(x - 2)(x - 2) = 0` 的结果。
+
+1. `x * (x - 2)` + `-2 * (x - 2)`
+2. 得到 `x² - 2x - 2x + 4`
+3. 化简 `x² - 4x + 4`
+4. 逆推 `(a - b)² = a² - 2ab + b²`
