--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -9,6 +9,10 @@ tags:
 - 一元二次方程
 ---
 
+# 一元二次方程
+
+`ax² + bx + c = 0`
+
 ## 🏷 平方差公式
 
 完全平方公式的结构特征：
@@ -17,24 +21,36 @@ tags:
 2. 左边两项符号相同时，右边各项全用 `+` 号连接；左边两项符号相反时，右边平方项用 `+` 号连接后再 `-` 两项乘积的2倍（注：这里说项时未包括其符号在内）；
 3. 公式中的字母可以表示具体的数（正数或负数），也可以表示单项式或多项式等数学式。
 
+`(a + b)(a - b) = a² - b²`。
+
+找出 `(x + 2)(x - 2) = 0` 中的 a，b，c。
+
+1. `x * (x - 2)` + `2 * (x - 2)`
+2. 得到 `x² - 2x + 2x - 4`
+3. 化简 `x² - 4`
+4. 逆推 `(a + b)(a - b) = a² - b²`
+5. 结果 `a = 1, b = 4, c = -4`
+
 ### 完全平方和
 
-`(a + b)² = a² + 2ab + b²` 叫做两数和的完全平方公式。
+`(a + b)(a + b) = a² + 2ab + b²` 叫做两数和的完全平方公式。
 
-计算 `(x + 2)(x + 2) = 0` 的结果。
+找出 `(x + 2)(x + 2) = 0` 中的 a，b，c。
 
 1. `x * (x + 2)` + `2 * (x + 2)`
 2. 得到 `x² + 2x + 2x + 4`
 3. 化简 `x² + 4x + 4`
-4. 逆推 `(a + b)² = a² + 2ab + b²`
+4. 逆推 `(a + b)(a + b) = a² + 2ab + b²`
+5. 结果 `a = 1, b = 4, c = 4`
 
 ### 完全平方差
 
-`(a - b)² = a² - 2ab + b²` 叫做两数差的完全平方公式。
+`(a - b)(a - b) = a² - 2ab + b²` 叫做两数差的完全平方公式。
 
-计算 `(x - 2)(x - 2) = 0` 的结果。
+找出 `(x - 2)(x - 2) = 0` 中的 a，b，c。
 
 1. `x * (x - 2)` + `-2 * (x - 2)`
 2. 得到 `x² - 2x - 2x + 4`
 3. 化简 `x² - 4x + 4`
-4. 逆推 `(a - b)² = a² - 2ab + b²`
+4. 逆推 `(a - b)(a - b) = a² - 2ab + b²`
+5. 结果 `a = 1, b = -4, c = 4`
