--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -11,9 +11,21 @@ tags:
 
 # 一元二次方程
 
-`ax² + bx + c = 0`
+只含有一个未知数（一元），并且未知数项的最高次数是2（二次）的整式方程叫做一元二次方程。一元二次方程经过整理都可化成一般形式 `ax² + bx + c = 0`（a≠0）。
 
-## 🏷 平方差公式
+- 二次项: ax²
+  - 二次项系数: a
+- 一次项: bx
+  - 一次项系数: b
+- 常数项: c
+
+## 公式（必须记住）
+
+- `(a + b)(a - b) = a² - b²`
+- 完全平方和: `(a + b)(a + b) = a² + 2ab + b²`
+- 完全平方差: `(a - b)(a - b) = a² - 2ab + b²`
+
+## 平方差公式
 
 完全平方公式的结构特征：
 
