--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -66,3 +66,21 @@ tags:
 3. 化简 `x² - 4x + 4`
 4. 逆推 `(a - b)(a - b) = a² - 2ab + b²`
 5. 结果 `a = 1, b = -4, c = 4`
+
+## 求解
+
+解一元二次方程：x 等于多少的时候方程等于 0。
+
+1. 判断是否有解，根据判别式 `Δ = b² - 4ac`
+  1. Δ > 0，有两个实数解（一般是一正一负）；
+  2. Δ = 0，有一个解；
+  3. Δ < 0，无实数解。
+2. 解方程的求根公式：`x = (-b ± √(b² - 4ac)) / 2a`，![Snipaste20220214152139.png](https://b3logfile.com/file/2022/02/Snipaste_2022-02-14_15-21-39-8a085070.png)
+
+求出方程 `2x² + 5x - 3 = 0` 的实数解。
+
+解：由题干得知 a = 2，b = 5，c = -3。
+
+套用判别式得到 Δ = `25 - 4 * 2 * (-3)` = `25 - 8 * (-3)` = `25 - (-24)` = `25 + 24` = 49。
+
+套用求根公式得到：`x = (-5 + √49) / 2 * 2 = (-5 + 7) / 4 = 1 / 2` 和 ` x = (-5 - √49) / 2 * 2 = (-5 - 7) / 4 = -3`
