--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -24,6 +24,8 @@ tags:
 - `(a + b)(a - b) = a² - b²`
 - 完全平方和: `(a + b)(a + b) = a² + 2ab + b²`
 - 完全平方差: `(a - b)(a - b) = a² - 2ab + b²`
+- 求根公式: ``x = (-b ± √(b² - 4ac)) / 2a`
+- 1² ... 20² 全部背下来
 
 ## 平方差公式
 
@@ -84,3 +86,41 @@ tags:
 套用判别式得到 Δ = `25 - 4 * 2 * (-3)` = `25 - 8 * (-3)` = `25 - (-24)` = `25 + 24` = 49。
 
 套用求根公式得到：`x = (-5 + √49) / 2 * 2 = (-5 + 7) / 4 = 1 / 2` 和 ` x = (-5 - √49) / 2 * 2 = (-5 - 7) / 4 = -3`
+
+## 平方数表
+
+![](https://b3logfile.com/file/2022/02/971b4010861d458182199a5c9ab7bd92.jpeg)
+
+### 1至20的平方记忆有什么规律
+
+`1、4、9、16、25、36、49、64、81、100、121、144、169、196、225、256、289、324、361、400`，你看这一串数字，1 与 4 差 3，4 与 9 差 5，9 与 16 差 7，16 与 25 差 9。
+
+也就是说，这些数字的之间是一个从三开始的质数差。
+
+因此你可以记住 5 的平方，10 的平方，15 的平方这几个特殊的数字与各自的后一位数的平方之差，这样你就可以很快找到下一个数字是多少了！
+
+比方说问你 14 的平方是多少？我们知道15的平方是 225，与后一位数之差是 31，与前一位数之差是 29，那么我们可知道 14 的平方就是 225 - 29 = 196。
+
+这样我们就很容易记住了!
+
+### 平方公式口诀有哪些
+
+#### 平方差公式
+
+两数和乘两数差，等于两数平方差。
+
+积化和差变两项，完全平方不是它。
+
+#### 完全平方公式
+
+二数和或差平方，展开式它共三项。
+
+首平方与末平方，首末二倍中间放。
+
+和的平方加联结，先减后加差平方。
+
+#### 完全平方公式
+
+首平方又末平方，二倍首末在中央。
+
+和的平方加再加，先减后加差平方。
