--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -87,6 +87,25 @@ tags:
 
 套用求根公式得到：`x = (-5 + √49) / 2 * 2 = (-5 + 7) / 4 = 1 / 2` 和 ` x = (-5 - √49) / 2 * 2 = (-5 - 7) / 4 = -3`
 
+## 高级解法·逆向思维
+
+求出方程 `(x - 2)(1 - 3x) = 0` 的实数解。
+
+套用求根公式可以计算出结果为 `1/3` 和 `2`，但是我们注意观察，两数相乘等于 0，说明 `(x - 2)` 或 `(1 - 3x)` 等于 0。
+
+只需要计算出对应的 x 就能得到结果 `1/3` 和 `2`。
+
+合理利用该解法，还可以解出一些高次方程：
+
+求出方程 `x³ - 4x = 0` 的实根（根即解）。
+
+化简方程为：x(x² - 4) = 0，可以得到 `x = 0` 和 `(x² - 4) = 0`。
+
+当 `x² = 4`，即 `x = ±2`。
+
+所以结果为 `x₁ = 0`，`x₂ = 2` 和 `x₃ = -2`。
+
+
 ## 平方数表
 
 ![](https://b3logfile.com/file/2022/02/971b4010861d458182199a5c9ab7bd92.jpeg)
@@ -124,3 +143,15 @@ tags:
 首平方又末平方，二倍首末在中央。
 
 和的平方加再加，先减后加差平方。
+
+## 一元二次方程根与系数的关系
+
+### 韦达定理
+
+`x₁ + x₂ = -(b / a)`
+
+`x₁ * x₂ = c / a`
+
+用于判断一元二次方程的两个实数解是否正确，应用韦达定理的前提是：`b² - 4ac ≥ 0`。
+
+我们可以利用韦达定理的公式和已知公式组成方程组，组出来的就是 `二元一次方程组`。
