--- a/source/_posts/202202/【数学基础】一元二次方程.md
+++ b/source/_posts/202202/【数学基础】一元二次方程.md
@@ -154,4 +154,4 @@ tags:
 
 用于判断一元二次方程的两个实数解是否正确，应用韦达定理的前提是：`b² - 4ac ≥ 0`。
 
-我们可以利用韦达定理的公式和已知公式组成方程组，组出来的就是 `二元一次方程组`。
+我们可以利用韦达定理的公式和已知公式组成方程组，组出来的就是 `二元一次方程组（两个未知数，一次方）`。
