--- a/source/_posts/202202/【数学基础】二元一次方程.md
+++ b/source/_posts/202202/【数学基础】二元一次方程.md
@@ -112,4 +112,16 @@ tags:
 
 套用判别式 `a₁/a₂ = b₁/b₂ = c₁/c₂`，得到：`1/2 = 2/a = 4/2a`，解出 `a = 4`。
 
-a = 6时，
+a = 6时，原方程组为：
+
+方程组1: `x + 2y = 4`
+ 
+方程组2: `2x + 6y = 12`
+
+1. 使用加减消元法，使方程组1 * 2，得到 `2x + 4y = 8`
+2. 方程组2 - 方程组1，得到 `2x + 6y - (2x + 4y) = 12 - 8`
+3. `2x + 6y - 2x - 4y = 4`
+4. `2y = 4`
+5. `y = 2`
+6. 将 `y = 2` 带入方程组1，得到 `x = 0`。
+
