--- a/source/_posts/202206/公文交换四川省人民政府版本.md
+++ b/source/_posts/202206/公文交换四川省人民政府版本.md
@@ -1,7 +1,7 @@
 title: 公文交换四川省人民政府版本
 date: 2022-06-15 16:02:00
 toc: false
-index_img: https://puep.qpic.cn/coral/Q3auHgzwzM4fgQ41VTF2rPqFqGEyYkuRdiaG2TiaYiaZZYzTR5hq7tVRw/0
+index_img: http://api.btstu.cn/sjbz/?lx=m_dongman&cid=3
 category:
 - 铂恩
 - 公文交换
