perf: 格式化 自然资源厅需求修改

--- a/source/_posts/202109/自然资源厅需求修改.md
+++ b/source/_posts/202109/自然资源厅需求修改.md
@@ -11,13 +11,13 @@ tags:
  - 文字
 ---
 
-# 需求文档
+## 需求文档
 
 [自然资源厅GKP开发需求描述2021年8月3日.zip](https://b3logfile.com/file/2021/09/自然资源厅GKP开发需求描述2021年8月3日-4b563293.zip)
 
-## 文字调整
+### 文字调整
 
-### 即将流向修改为 下一步流向
+#### 即将流向修改为 下一步流向
 
 如图：
 
@@ -57,7 +57,7 @@ tags:
 1. 发文修改 `km/imissive/ApplicationResource.properties` 的 `kmImissiveSendMain.baseinfo` 修改为 `发文审批笺` 即可。
 2. 收文修改 `km/imissive/ApplicationResource.properties` 的 `kmImissiveReceiveMain.baseinfo` 修改为 `收文处理笺` 即可。
 
-### 发文的正文菜单修改为 拟发文
+#### 发文的正文菜单修改为 拟发文
 
 如图：
 
@@ -69,7 +69,7 @@ tags:
 
 `src/com/landray/kmss/km/imissive/ApplicationResources.properties` 的 `kmImissiveSendMain.docContent` 修改为 `拟发文` 即可。
 
-## 界面调整
+### 界面调整
 
 此类修改均建议通过浏览器的 `Network` - `Panel` 搜索关键字进行处理，而不是直接找代码。
 
@@ -83,7 +83,7 @@ tags:
 
 搜索出来的内容如果过多，还需要结合实际的代码进行逻辑判断。
 
-### 提交按钮最前
+#### 提交按钮最前
 
 如图：
 
@@ -95,54 +95,56 @@ tags:
 
 1. 浏览器等待界面加载完毕，`Console` 执行：
 
-   ```javascript
+   ```
    $.map(LUI("toolbar").buttons,function(item,index){
        return item.config.text + item.config.order + "_" + item.config.click
    })
    ```
+
 2. 查看输出，`_`后的为方法名称，在 jsp 页面搜索。
 
    ![image.png](https://b3logfile.com/file/2021/09/image-5fa9b1ef.png)
+
 3. 查看输出的排序号，按照具体的规则去页面跳转 order 即可。
 
-> 例如浏览页面，实际顺序为
->
-> ```javascript
-> 0: "删除1_Delete('kmImissiveSendMain.do?method=delete&fdId=17ba53c85e0c6448ecd9d63432e8064f');"
-> 1: "暂存1__saveFormData();"
-> 2: "收藏1_openBookDia();"
-> 3: "取消收藏1_deleteBookedMark(GetBookmarkUrl());"
-> 4: "传阅3_circulate();"
-> 5: "提交4_$('#process_review_button').click();"
-> 6: "提交4_lbpm.globals.extendRoleOptWindowSubmit('updateByPanel','right');"
-> 7: "编辑5_editDoc();"
-> 8: "打印5_printDoc();"
-> 9: "关闭5_Com_CloseWindow();"
-> ```
->
-> 对应的顺序为：
->
-> ![image.png](https://b3logfile.com/file/2021/09/image-b03ac6ac.png)
->
-> ---
->
-> 再例如编辑页面，实际顺序为：
->
-> ```javascript
-> 0: "关闭4_Com_CloseWindow()"
-> 1: "关联配置4_undefined"
-> 2: "提交5_ submitOrUpdateDoc(document.kmImissiveSendMainForm, 'update');"
-> ```
->
-> 对应的顺序为：
->
-> ![image.png](https://b3logfile.com/file/2021/09/image-c8ff21d3.png)
->
-> ---
->
-> 切记按照分页面处理顺序，每个页面的展示顺序并不一定相同！
+   例如浏览页面，实际顺序为
+   
+   ```
+   0: "删除1_Delete('kmImissiveSendMain.do?method=delete&fdId=17ba53c85e0c6448ecd9d63432e8064f');"
+   1: "暂存1__saveFormData();"
+   2: "收藏1_openBookDia();"
+   3: "取消收藏1_deleteBookedMark(GetBookmarkUrl());"
+   4: "传阅3_circulate();"
+   5: "提交4_$('#process_review_button').click();"
+   6: "提交4_lbpm.globals.extendRoleOptWindowSubmit('updateByPanel','right');"
+   7: "编辑5_editDoc();"
+   8: "打印5_printDoc();"
+   9: "关闭5_Com_CloseWindow();"
+   ```
+   
+   对应的顺序为：
+   
+   ![image.png](https://b3logfile.com/file/2021/09/image-b03ac6ac.png)
+   
+   ---
+   
+   再例如编辑页面，实际顺序为：
+   
+   ```javascript
+   0: "关闭4_Com_CloseWindow()"
+   1: "关联配置4_undefined"
+   2: "提交5_ submitOrUpdateDoc(document.kmImissiveSendMainForm, 'update');"
+   ```
+   
+   对应的顺序为：
+   
+   ![image.png](https://b3logfile.com/file/2021/09/image-c8ff21d3.png)
+   
+   ---
+   
+   切记按照分页面处理顺序，每个页面的展示顺序并不一定相同！
 
-### 非收文流程隐藏正文与附件查看
+#### 非收文流程隐藏正文与附件查看
 
 即 `收文未处理完(docStatus!=30)` 的情况下，隐藏掉菜单项。如图：
 
@@ -159,7 +161,7 @@ tags:
 
 修改前
 
-```jsp
+```
 <ui:content  title="${ lfn:message('km-imissive:kmImissiveReceiveMain.attContent') }" id="attPreview" titleicon="lui-tab-icon tab-icon-05">
 	<div id="attachment_preview">
 		<iframe width="100%" height="100%" frameborder="0" scrolling="auto" id="previewAttFrame" src="${KMSS_Parameter_ContextPath}sys/attachment/sys_att_main/sysAttMain_preview_noDataB.jsp"></iframe>
@@ -169,7 +171,7 @@ tags:
 
 修改后
 
-```jsp
+```
 <script>
 	console.log("展示 正文 与 附件查看 菜单", '${kmImissiveReceiveMainForm.docStatus == '30'}');
 </script>
@@ -194,7 +196,7 @@ tags:
 
 修改前
 
-```jsp
+```
 <ui:content  title="${ lfn:message('km-imissive:kmImissiveReceiveMain.docContent') }"  style="padding:6px" id="attContent"  titleicon="lui-tab-icon tab-icon-10" >
     <div class="lui_form_content_frame">
         内容过长，省略...
@@ -207,9 +209,9 @@ tags:
 </ui:content>
 ```
 
-修改后
+修改后：
 
-```jsp
+```
 <script>
     console.log("展示 正文 与 附件查看 菜单", '${kmImissiveReceiveMainForm.docStatus == '30'}');
 </script>
@@ -227,11 +229,11 @@ tags:
 </c:if>
 ```
 
-## 元素顺序调整
+### 元素顺序调整
 
 修改此类需求和界面调整类似，但需要灵活变通。
 
-### 附件列表默认第一个显示
+#### 附件列表默认第一个显示
 
 效果如图：
 
@@ -248,7 +250,7 @@ tags:
 
 例发文编辑界面的调整，调整前的代码为：
 
-```jsp
+```
 <ui:tabpanel id="barRightPanel" channel="barRightPanel" layout="${layout}">
 
     <c:import url="/sys/workflow/import/sysWfProcess_edit.jsp" charEncoding="UTF-8">
@@ -281,7 +283,7 @@ tags:
 
 调整后的代码为：
 
-```jsp
+```
 <ui:tabpanel id="barRightPanel" channel="barRightPanel" layout="${layout}">
     <%--附件列表排在第一位--%>
     <ui:content  title="${ lfn:message('km-imissive:kmImissiveSendMain.attList') }" id="attPreviewList" titleicon="lui-fm-icon lui-fm-icon-2">
